--- a/home.css
+++ b/home.css
@@ -201,7 +201,8 @@
   padding: 10px;
   padding-left: 100px;
   padding-right: 100px;
-  box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+  height: 90%;
+
   
   
 }
@@ -210,21 +211,24 @@
   padding:10px;
   margin-top: 20px;
   color:rgb(8, 1, 1);
-  font-size: 30px ;
-  font-family: 'Montserrat';
+  font-size: 32px ;
+  font-family:"Calibri";
   display: table-cell;
   vertical-align: middle;
 }
+.abimg p{
+  font-family:"Calibri";
+}
 .products h1 {
-  font-family: adobe-Garamond-pro;
   z-index: 2;
-  font-size: 78px;
+  font-size: 56px;
     top: 10%; 
     left: 50%;
+    padding: 20px;
     text-transform: uppercase;
-    font-family: monospace;
     color:rgb(34, 27, 27);
     font-family:"adobe-gothic-std";
+    font-style: normal;
 }
 
 .images {
@@ -263,6 +267,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
+  display:flex ;
   z-index: -1;
   box-sizing:border-box;
   width: 100%;
@@ -276,9 +281,9 @@ img {vertical-align: middle;}
     #cac1b4 100%
   );
   z-index: 1;
-  padding:60px;
+  padding:10px;
+  padding-right: 10px;
   padding-top: 15px;
-  padding-right: 50px;
   overflow-x: hidden;
   overflow-y:hidden ;
 }
@@ -298,7 +303,7 @@ img {vertical-align: middle;}
 
 .w3-black, .w3-hover-black:hover {
   color: #fff!important;
-  background-color: #000!important;
+  background-color: #454444 !important;
 }
 .w3-btn, .w3-button {
   -webkit-touch-callout: none;
@@ -311,9 +316,7 @@ img {vertical-align: middle;}
 .w3-btn, .w3-button {
   border: none;
   display: inline-block;
-  padding: 14px;
-  margin-top: 10px;
-  
+  padding: 10px;
   overflow: hidden;
   text-decoration: none;
   color: inherit;
@@ -321,15 +324,24 @@ img {vertical-align: middle;}
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
-  border-radius: 20px;
+  border-radius: 50%;
   z-index: 5;
   
 }
 #l1{
-  margin-left: 45%;
+  flex-basis: 5%;
+  height: 70px;
+  margin-top: 20%;
+  margin-left: 20px;
 }
 #l2{
-  margin-left: 10px;
+  flex-basis: 5%;
+  height: 70px;
+  margin-top: 20%;
+  margin-right: 20px;
+}
+.mySlides{
+  flex-basis: 95%;
 }
 button, [type=button], [type=reset], [type=submit] {
   -webkit-appearance: button;
@@ -343,99 +355,116 @@ button, [type=button], [type=reset], [type=submit] {
    animation-iteration-count: infinite;
 }
 .imgp1{
-  z-index: -1;
+  z-index: 1;
   background-image: url("p1.jpg");
-  background-size:contain;
+  background-size:cover;
    background-repeat:no-repeat;
    display: block;
    background-position: center;
    padding:300px;
-   width: 100%;
+   width: 98%;
   height: 100%;
-  padding-bottom: 50px;
-  box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+  padding-bottom: 80px;
 }
 .imgp2{
-  z-index: -1;
+  z-index: 1;
   background-image: url("p2.jpg");
-  background-size:contain;
+  background-size:cover;
    background-repeat:no-repeat;
    display: block;
    background-position: center;
    padding:300px;
-   padding-bottom: 50px;
-   width: 100%;
+   padding-bottom: 80px;
+   width: 98%;
    height: 100%;
-box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
 }
 .imgp3{
-  z-index: -1;
+  z-index: 1;
   background-image: url("p3.jpg");
- background-size:contain;
+  background-size:cover;
    background-repeat:no-repeat;
    display: block;
-   background-position: center;
+   background-position: top;
    padding:300px;
-   width: 100%;
    height: 100%;
-  padding-bottom: 50px;
-   box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+   width: 98%;
+   padding-bottom: 80px;
 }
 .imgp4{
-  z-index: -1;
+  z-index: 1;
   background-image: url("p4.jpg");
-  background-size:contain;
+  background-size:cover;
    background-repeat:no-repeat;
    display: block;
-   background-position: center;
+   background-position: 3%;
    padding:300px;
-   width: 100%;
    height: 100%;
-  padding-bottom: 50px;
-box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+   width: 98%;
+   padding-bottom: 80px;
 }
 .imgp5{
-  z-index: -1;
+  z-index: 1;
   background-image: url("p5.jpg");
-  background-size:contain;
+  background-size:cover;
    background-repeat:no-repeat;
    display: block;
    padding:300px;
-   background-position: center;
-   width: 100%;
    height: 100%;
-  padding-bottom: 50px;
-box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+   width: 98%;
+   padding-bottom: 80px;
 }
-.imgp5 h1,.imgp4 h1,.imgp3 h1{
+.mySlides{
+  margin-left: 50px;
+}
+.mySlides h1{
+  padding: 50px;
+  position: absolute;
   z-index: 3;
-  top: 70%;
-  left: 10%;
-  color:White;
-  font-family:"HELVETICA";
-  font-size:50px;
-  margin-top: 1em;
-  margin-left: 50%;
+  font-family:"adobe-gothic-std";
+  color: #cac1b4;
+  font-size:40px;
+  margin-right: 60%;
+  font-style: normal;
 }
-.imgp1 h1{
+.mySlides h2{
+  padding: 50px;
+  position: absolute;
   z-index: 3;
-  top: 70%;
-  left: 10%;
-  color:White;
-  font-family:"HELVETICA";
-  font-size:50px;
-  margin-top: 1em;
-  margin-left: 25%;
+  font-family:"adobe-gothic-std";
+  color: #454444 ;
+  font-size:40px;
+  margin-right: 60%;
+  font-style: normal;
 }
-.imgp2 h1{
-   z-index: 3;
-  top: 70%;
-  left: 10%;
-  color:White;
-  font-family:"HELVETICA";
-  font-size:50px;
-  margin-top: 1em;
-  margin-left: 37%;
+.mySlides h3{
+  padding: 50px;
+  position: absolute;
+  z-index: 3;
+  font-family:"adobe-gothic-std";
+  color: #454444 ;
+  font-size:40px;
+  margin-right: 60%;
+  font-style: normal;
+}
+.mySlides h4{
+  padding: 50px;
+  position: absolute;
+  z-index: 3;
+  font-family:"adobe-gothic-std";
+  color: #cac1b4;
+  font-size:40px;
+  margin-right: 60%;
+  font-style: normal;
+}
+.mySlides h5{
+  padding: 50px;
+  position: absolute;
+  z-index: 3;
+  font-family:"adobe-gothic-std";
+  color: #454444 ;
+  font-size:40px;
+  margin-right: 60%;
+  font-style: normal;
 }
 
 
@@ -473,7 +502,7 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
     /*if your want to padding */
     height: 100%;
     width: 100%;
-    box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
+   
 
 }
 
@@ -616,19 +645,20 @@ box-shadow: 0px 0px 12px 3px rgb(12, 12, 12);
   margin-top: 20px;
   color:rgb(8, 1, 1);
   font-size: 30px ;
-  font: "Montserrat";
+  
   display: table-cell;
   vertical-align: middle;
   
 }
+.abimg p{
+  font-family:"Calibri";
+}
 .products h1 {
-  font-family: adobe-Garamond-pro;
   z-index: 2;
   font-size: 33px;
     top: 10%; 
     left: 50%;
     text-transform: uppercase;
-    font-family: verdana;
     color:rgb(27, 23, 23);
 }
 .con{
