--- a/home.css
+++ b/home.css
@@ -208,12 +208,14 @@
 }
 
 .abimg{
-  padding:40px;
+  padding:10px;
   margin-top: 20px;
-  color:rgb(8, 1, 1);
+  color:#454444;
   font-size: 24px ;
   font-family:"Calibri";
   display: table-cell;
+  margin-left:20px;
+  margin-right:20px;
   vertical-align: middle;
 }
 .abimg p{
@@ -222,9 +224,9 @@
 .products h1 {
   z-index: 2;
   font-size: 56px;
-    top: 10%; 
-    left: 50%;
-    padding: 30px;
+    top: 15%; 
+    left: 55%;
+    padding: 25px;
     text-transform: uppercase;
     color:rgb(34, 27, 27);
     font-family:"adobe-gothic-std";
