--- a/home.css
+++ b/home.css
@@ -875,9 +875,10 @@ padding: 10px;
   margin-left: 45%;
 }
 #l22{
-  margin-left: 5px;
+  display: block;
+  margin-left: 8px;
 }
-#l2{
+#l2,#l1{
   display: none;
 }
 
