--- a/home.css
+++ b/home.css
@@ -192,16 +192,7 @@
   padding-left: 100px;
   padding-bottom: 5px;
   height: 100%;
-  background: linear-gradient(
-    to right, 
-    #ffffff 0%, 
-    #ffffff 50%, 
-    #cac1b4 50%, 
-    #cac1b4 90%,
-    #ffffff 90%, 
-    #ffffff 100%
-  );
-
+  background-color: #ffffff;
 }
 .products {
   z-index: 2;
