--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 /*! FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
-@import url(//db.onlinewebfonts.com/c/520994a2ecf772a7c7ac2dde1f144903?family=stencilla);
+@import url('http://fonts.cdnfonts.com/css/stencilla');
 
 /* ! */
 * {
@@ -116,7 +116,7 @@
   padding: 30px;
   z-index: 1;
   font-size: 1.8rem;
-  font-family:"stencilla";
+  font-family: 'stencilla', sans-serif;                                           
   color: #cac1b4;
 }
 
