--- a/home.css
+++ b/home.css
@@ -116,7 +116,8 @@
   padding: 30px;
   z-index: 1;
   font-size: 1.8rem;
-  font-family: 'stencilla', sans-serif;                                           
+  font-family: stencil-std,sans-serif;
+font-style: normal;                                        
   color: #cac1b4;
 }
 
