--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 /*! FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
-@import url('http://fonts.cdnfonts.com/css/stencilla');
+
 
 /* ! */
 * {
@@ -10,6 +10,10 @@
   box-sizing: border-box;
   font-family: "Titillium Web",'Montserrat',"adobe-gothic-std", sans-serif;
   scroll-behavior: smooth;
+}
+@font-face {
+  font-family: 'Comaro Normal';
+  src: url('http://www.fontsaddict.com/fontface/comaro-normal.ttf');
 }
 .spinner-wrapper{
   width: 100%;
@@ -116,7 +120,7 @@
   padding: 30px;
   z-index: 1;
   font-size: 1.8rem;
-  font-family: "stencil-std",sans-serif;
+  font-family: 'Comaro Normal',sans-serif;
 font-style: normal;                                        
   color: #cac1b4;
 }
