--- a/home.css
+++ b/home.css
@@ -111,6 +111,9 @@
   justify-content: center;
   align-items: center;
 }
+.lg h1{
+  font-family: 'Comaro Normal',sans-serif;
+}
 
 .showcase header {
   position: absolute;
@@ -120,7 +123,7 @@
   padding: 30px;
   z-index: 1;
   font-size: 1.8rem;
-  font-family: 'Comaro Normal',sans-serif;
+  
 font-style: normal;                                        
   color: #cac1b4;
 }
