--- a/home.css
+++ b/home.css
@@ -1,6 +1,7 @@
 /*! FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
+@import url('http://fonts.cdnfonts.com/css/camaro');
 
 
 /* ! */
@@ -11,11 +12,7 @@
   font-family: "Titillium Web",'Montserrat',"adobe-gothic-std", sans-serif;
   scroll-behavior: smooth;
 }
-@font-face {font-family: "Comaro"; 
-  src: url("Comaro.ttf")format('ttf');
-  font-weight: normal;
-  font-style: normal;
-}
+
 .spinner-wrapper{
   width: 100%;
   height: 100%;
@@ -113,7 +110,7 @@
   align-items: center;
 }
 .header h1{
-  font-family: "Comaro";
+font-family: 'Camaro', sans-serif;
 }
 
 .showcase header {
@@ -123,7 +120,7 @@
   width: 100%;
   padding: 30px;
   z-index: 1;
-  font-family: "Comaro";
+  font-family: 'Camaro', sans-serif;
   font-size: 1.8rem;
 font-style: normal;                                        
   color: #cac1b4;
