--- a/home.css
+++ b/home.css
@@ -2,8 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
-
-
 /* ! */
 * {
   margin: 0;
@@ -12,7 +10,6 @@
   font-family: "Titillium Web",'Montserrat',"adobe-gothic-std", sans-serif;
   scroll-behavior: smooth;
 }
-
 .spinner-wrapper{
   width: 100%;
   height: 100%;
@@ -110,10 +107,6 @@
   align-items: center;
 }
 
-.header h1{
-font-family: 'Comaro', sans-serif;
-}
-
 .showcase header {
   position: absolute;
   top: 0;
@@ -121,9 +114,7 @@ font-family: 'Comaro', sans-serif;
   width: 100%;
   padding: 30px;
   z-index: 1;
-  font-family: 'Camaro', sans-serif;
   font-size: 1.8rem;
-font-style: normal;                                        
   color: #cac1b4;
 }
 
@@ -201,7 +192,16 @@ font-style: normal;
   padding-left: 100px;
   padding-bottom: 5px;
   height: 100%;
-  background-color: #ffffff;
+  background: linear-gradient(
+    to right, 
+    #ffffff 0%, 
+    #ffffff 50%, 
+    #cac1b4 50%, 
+    #cac1b4 90%,
+    #ffffff 90%, 
+    #ffffff 100%
+  );
+
 }
 .products {
   z-index: 2;
@@ -531,7 +531,7 @@ button, [type=button], [type=reset], [type=submit] {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(248, 247, 247);
+  background-color: rgb(248, 247, 247);;
 }
 .text1{
   flex-basis: 50%;
@@ -625,28 +625,23 @@ button, [type=button], [type=reset], [type=submit] {
     opacity: 1;
   }
 }
-@media screen and (max-width: 1366px){
+@media screen and (max-width: 1340px){
   .abimg p{
     margin-top: 10px;
     font-size: 22px;
     
 
 } 
-  .abimg{
-  padding-left: 90px;
-  padding-right: 90px;
-
-}
 .products h1 {
  
   margin-top:40px;
 
 }
 .text1 a{
-  margin-left: 40%;
+  margin-left: 50%;
 }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1024px) {
   .lg{
     padding:30px;
   }
@@ -659,6 +654,7 @@ button, [type=button], [type=reset], [type=submit] {
   
 .products {
   z-index: 2;
+  background-color: #fafafa ;
   align-items: center;
   text-align: center;
   padding: 10px;
@@ -790,12 +786,11 @@ position: relative;
 .text1 a{
   font-size: 1rem;
   padding:10px;
-  margin-left: 20%;
+  margin-left: 30%;
 }
 .mat h2{
   font-size: 1rem;;
 }
-
 
 /* Slideshow container */
 .slideshow-container {
@@ -896,16 +891,37 @@ padding: 10px;
   display: none;
 }
 .gif{
-
+  align-items: center;
+  z-index: 2;
+  box-sizing: border-box;
   padding:5px;
   height: 300px;
-
+  background: linear-gradient(
+    to right, 
+    #ffffff 0%,
+    #ffffff 20%,  
+    #cac1b4 20%, 
+    #cac1b4 50%, 
+    #ffffff 50%, 
+    #ffffff 100%
+  );
+  background-size:contain;
+  align-items: center;
+  text-align: center;
   
 }
 
 .gif1{
+  z-index: 4;
   height: 90%;
   width: 100%;
+   background-size:contain;
+   background-repeat:no-repeat;
+   background-position: center;
+   margin:0; /* If you want no margin */
+    /*if your want to padding */
+   
 
 }
+
 }
