--- a/home.css
+++ b/home.css
@@ -776,7 +776,7 @@ position: relative;
   z-index: -1;
   box-sizing:border-box;
   width: 100%;
-  height: 50%;
+  height: 60vh;
   background: linear-gradient(
     to right, 
     #ffffff 0%, 
@@ -786,7 +786,6 @@ position: relative;
     #ffffff 94%, 
     #ffffff 100%
   );
-  z-index: 1;
   padding:10px;
   padding-top: 5px;
   overflow-x: hidden;
@@ -822,7 +821,7 @@ button, [type=button], [type=reset], [type=submit] {
 .imgp1,.imgp2,.imgp3,.imgp4,.imgp5{
   padding:100px;
   padding-bottom: 30px;
-  height: 90%;
+  height: 90vh;
   background-size:cover;
 }
 
@@ -891,8 +890,7 @@ padding: 10px;
 
 .gif1{
   z-index: 4;
-  height: 90%;
-  width: 100%;
+  height: 90vh;
    background-size:contain;
    background-repeat:no-repeat;
    background-position: center;
