--- a/home.css
+++ b/home.css
@@ -776,7 +776,7 @@ position: relative;
   z-index: -1;
   box-sizing:border-box;
   width: 100%;
-  height: 60vh;
+  height: 50%;
   background: linear-gradient(
     to right, 
     #ffffff 0%, 
@@ -822,7 +822,7 @@ button, [type=button], [type=reset], [type=submit] {
   padding:100px;
   padding-bottom: 30px;
   height: 90vh;
-  background-size:cover;
+  background-size:contain;
 }
 
 .mySlides{
@@ -871,7 +871,7 @@ padding: 10px;
   align-items: center;
   z-index: 2;
   box-sizing: border-box;
-  padding:5px;
+  padding:50px;
   height: 300px;
   background: linear-gradient(
     to right, 
